--- a/Viz/www/demos/eeg/viz_eeg.yml
+++ b/Viz/www/demos/eeg/viz_eeg.yml
@@ -13,7 +13,7 @@ modules:
       sampling_rate: 250  # Hz (samples per second)
       num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
       range: [-50,50]   # range of integers, (i.e. [1,10])
-      pattern: "rand"   # rand | sine
+      pattern: "sine"   # rand | sine
       frequency: 10  # Hz (only used with sine)
     outputs:
       data:
@@ -29,7 +29,7 @@ modules:
       debug: False
       num_channels: 16
       samples_per_window: 500
-      window_overlap: 20
+      window_overlap: 16
     inputs:
       data:
         name: "eeg"
@@ -55,27 +55,27 @@ modules:
         data_type: "RAW_DATA"
     outputs:
       data:
-        message_queues: "window_coords"
+        message_queues: "eegd"
         message_type: "MATRIX"
         data_type: "RAW_COORDS"
         buffer_size: 0
 
 ###################################################################
-  - id: "foo7"
-    class: "ModuleDownsample"
-    settings:
-      formula: "lttb"
-      percent: 25      # percentage of original data size to downsample to
-      debug: False
-      num_channels: 16
-    inputs:
-      data:
-        name: "window_coords"
-        message_type: "MATRIX"
-        data_type: "RAW_COORDS"
-    outputs:
-      data:
-        message_queues: "eegd"
-        message_type: "MATRIX"
-        data_type: "RAW_COORDS"
-        buffer_size: 0
+#  - id: "foo7"
+#    class: "ModuleDownsample"
+#    settings:
+#      formula: "lttb"
+#      percent: 50      # percentage of original data size to downsample to
+#      debug: False
+#      num_channels: 16
+#    inputs:
+#      data:
+#        name: "window_coords"
+#        message_type: "MATRIX"
+#        data_type: "RAW_COORDS"
+#    outputs:
+#      data:
+#        message_queues: "eegd"
+#        message_type: "MATRIX"
+#        data_type: "RAW_COORDS"
+#        buffer_size: 0
