moving forward with canvas.js, other library demos as well. performance enhancements, including: 1. improved timing accuracy of SignalGenerator to match desired sampling frequency. now uses hybrid of sleep & busy-wait, and has calibration mode flag to change ratio between the two for a specific install  2. redraw speed of canvas.js eeg demo, now able to smoothly redraw at 12fps - 24fps with all 16 channels, both downsample and not, both sine and rand  3. on websocket connection open, viz server now sends "handshake" to inform frontend UI of available metrics. additionally, Connections now are aware of conf.yml file used by run.py  4. bug fixes & optimizations

--- a/Viz/www/demos/eeg/viz_eeg.yml
+++ b/Viz/www/demos/eeg/viz_eeg.yml
@@ -6,76 +6,78 @@
 
 modules:
 ###################################################################
-  - id: "foo1"
+  - id: "origin1"
     class: "ModuleSignalGenerator"
     settings:
       debug: False
       sampling_rate: 250  # Hz (samples per second)
       num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
-      range: [-50,50]   # range of integers, (i.e. [1,10])
-      pattern: "sine"   # rand | sine
+      range: [-40,40]   # range of integers, (i.e. [1,10])
+      pattern: "eeg"   # rand | sine
       frequency: 10  # Hz (only used with sine)
     outputs:
       data:
-        message_queues: "eeg"
+        message_queues: "viz_eeg"
         message_type: "TIME_SAMPLE"
-        data_type: "RAW_DATA"
-        buffer_size: 10
-
-###################################################################
-  - id: "foo4"
-    class: "ModuleWindows"
-    settings:
-      debug: False
-      num_channels: 16
-      samples_per_window: 500
-      window_overlap: 16
-    inputs:
-      data:
-        name: "eeg"
-        message_type: "TIME_SAMPLE"
-        data_type: "RAW_DATA"
-    outputs:
-      data:
-        message_queues: "window"
-        message_type: "MATRIX"
         data_type: "RAW_DATA"
         buffer_size: 0
 
 ###################################################################
-  - id: "foo6"
+  - id: "viz1"
+    class: "ModuleWindows"
+    settings:
+      # samples_per_window:50, window_overlap:21 = 12fps
+
+      debug: False
+      num_channels: 16
+      samples_per_window: 20
+      window_overlap: 0
+    inputs:
+      data:
+        name: "viz_eeg"
+        message_type: "TIME_SAMPLE"
+        data_type: "RAW_DATA"
+    outputs:
+      data:
+        message_queues: "viz_window"
+        message_type: "MATRIX"
+        data_type: "RAW_DATA"
+        buffer_size: 0
+
+####################################################################
+  - id: "viz2"
     class: "ModuleConvert"
     settings:
       debug: False
       num_channels: 16
     inputs:
       data:
-        name: "window"
+        name: "viz_window"
         message_type: "MATRIX"
         data_type: "RAW_DATA"
     outputs:
       data:
-        message_queues: "eegd"
+        message_queues: "viz_coords"
         message_type: "MATRIX"
         data_type: "RAW_COORDS"
         buffer_size: 0
 
-###################################################################
-#  - id: "foo7"
+######################################################################
+#  - id: "viz3"
 #    class: "ModuleDownsample"
 #    settings:
 #      formula: "lttb"
-#      percent: 50      # percentage of original data size to downsample to
+#      percent: 80      # percentage of original data size to downsample to
 #      debug: False
 #      num_channels: 16
 #    inputs:
 #      data:
-#        name: "window_coords"
+#        name: "viz_coords"
 #        message_type: "MATRIX"
 #        data_type: "RAW_COORDS"
 #    outputs:
 #      data:
-#        message_queues: "eegd"
+#        message_queues: "viz_downsampled_eeg"
 #        message_type: "MATRIX"
 #        data_type: "RAW_COORDS"
 #        buffer_size: 0
