--- a/conf/test_modules/module_class_windows.yml
+++ b/conf/test_modules/module_class_windows.yml
@@ -4,9 +4,10 @@
 # Each module can specify input and output features.
 # The term "feature" here is interchangeable with "metric" in cloudbrain.
 # "feature" refers specifically to a tag which identifies the appropriate queue in rabbitmq to subscribe to.
-# First module will almost always take metric "eeg" as input
 #
 ###################################################################
+global:
+  num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
 
 modules:
 ###################################################################
@@ -15,8 +16,7 @@ modules:
     settings:
       debug: False
       sampling_rate: 250  # Hz (samples per second)
-      num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
-      range: [-50,50]   # range of integers, (i.e. [1,10])
+      range: [-500,3000]   # range of integers, (i.e. [1,10])
       pattern: "sine"   # rand | sine
       frequency: 10  # Hz (only used with sine)
     outputs:
@@ -27,82 +27,80 @@ modules:
         buffer_size: 10
 
 ###################################################################
-#  - id: "foo2"
-#    class: "ModuleSignalGenerator"
-#    settings:
-#      debug: False
-#      frequency: 3  # Hz (samples per second)
-#      num_channels: 1  # how many outputs to produce
-#      range: [-1,3]     # range of integers, (i.e. [1,10])
-#      pattern: "rand"   # rand | sine
-#    outputs:
-#      data:
-#        message_queues: "motor_class"
-#        message_type: "TIME_SAMPLE"
-#        data_type: "CLASS_LABELS"
-#        buffer_size: 1
+  - id: "foo2"
+    class: "ModuleSignalGenerator"
+    settings:
+      debug: False
+      frequency: 3  # Hz (samples per second)
+      num_channels: 1  # how many outputs to produce
+      range: [-1,1]     # range of integers, (i.e. [1,10])
+      pattern: "rand"   # rand | sine
+    outputs:
+      data:
+        message_queues: "motor_class"
+        message_type: "TIME_SAMPLE"
+        data_type: "CLASS_LABELS"
+        buffer_size: 1
 
 ###################################################################
 #
-  - id: "foo3"
-    class: "ModuleWindows"
+#  - id: "foo3"
+#    class: "ModuleWindows"
+#    settings:
+#      debug: False
+#      samples_per_window: 500
+#      window_overlap: 20
+#    inputs:
+#      data:
+#        name: "eeg"
+#        message_type: "TIME_SAMPLE"
+#        data_type: "RAW_DATA"
+#    outputs:
+#      data:
+#        message_queues: "window"
+#        message_type: "MATRIX"
+#        data_type: "RAW_DATA"
+#        buffer_size: 0
+
+###################################################################
+  - id: "foo4"
+    class: "ModuleClassWindows"
     settings:
       debug: False
-      num_channels: 16
-      samples_per_window: 500
-      window_overlap: 20
     inputs:
       data:
         name: "eeg"
         message_type: "TIME_SAMPLE"
         data_type: "RAW_DATA"
+      labels:
+        name: "motor_class"
+        message_type: "TIME_SAMPLE"
+        data_type: "CLASS_LABELS"
     outputs:
       data:
-        message_queues: "window"
+        message_queues: "motor_class_windows"
         message_type: "MATRIX"
-        data_type: "RAW_DATA"
+        data_type: "LABELED_DATA"
         buffer_size: 0
 
 ###################################################################
-#  - id: "foo4"
-#    class: "ModuleClassWindows"
+#  - id: "foo5"
+#    class: "ModuleFFT"
 #    settings:
 #      debug: False
+#      sampling_rate: 250
+#      samples_per_window: 500
 #    inputs:
 #      data:
-#        name: "eeg2"
-#        message_type: "TIME_SAMPLE"
+#        name: "window"
+#        message_type: "MATRIX"
 #        data_type: "RAW_DATA"
-#      labels:
-#        name: "motor_class"
-#        message_type: "TIME_SAMPLE"
-#        data_type: "CLASS_LABELS"
 #    outputs:
 #      data:
-#        message_queues: ["motor_class_windows","viz1"]
+#        message_queues: "eegd"
 #        message_type: "MATRIX"
-#        data_type: "LABELED_DATA"
+#        data_type: "RAW_COORDS"
 #        buffer_size: 0
-
-###################################################################
-  - id: "foo5"
-    class: "ModuleFFT"
-    settings:
-      debug: False
-      num_channels: 16
-      sampling_rate: 250
-      samples_per_window: 500
-    inputs:
-      data:
-        name: "window"
-        message_type: "MATRIX"
-        data_type: "RAW_DATA"
-    outputs:
-      data:
-        message_queues: "eegd"
-        message_type: "MATRIX"
-        data_type: "RAW_COORDS"
-        buffer_size: 0
 
 ###################################################################
 #  - id: "foo6"
