--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -3,33 +3,35 @@
 # Specifically, EEG using fixed windows, with coords & downsampling
 #
 ###################################################################
+global:
+  num_channels: 1  # how many outputs to produce (default to device if specified, or 1 if not)
 
 modules:
 ###################################################################
-  - id: "foo1"
-    class: "ModuleSignalGenerator"
-    settings:
-      debug: False
-      sampling_rate: 250  # Hz (samples per second)
-      num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
-      range: [-50,50]   # range of integers, (i.e. [1,10])
-      pattern: "rand"   # rand | sine
-      frequency: 10  # Hz (only used with sine)
-    outputs:
-      data:
-        message_queues: "eeg"
-        message_type: "TIME_SAMPLE"
-        data_type: "RAW_DATA"
-        buffer_size: 16
+#  - id: "foo1"
+#    class: "SignalGenerator"
+#    settings:
+#      debug: False
+#      sampling_rate: 250  # Hz (samples per second)
+#      num_channels: 16  # how many outputs to produce (default to device if specified, or 1 if not)
+#      range: [-50,50]   # range of integers, (i.e. [1,10])
+#      pattern: "rand"   # rand | sine
+#      frequency: 10  # Hz (only used with sine)
+#    outputs:
+#      data:
+#        message_queues: "eeg"
+#        message_type: "TIME_SAMPLE"
+#        data_type: "RAW_DATA"
+#        buffer_size: 16
 
 ###################################################################
-  - id: "foo4"
-    class: "ModuleWindows"
+  - id: "viz1"
+    class: "TimeWindow"
     settings:
-      debug: False
-      num_channels: 16
-      samples_per_window: 500
-      window_overlap: 16
+      debug: True
+      samples_per_window: 128
+      window_overlap: 0
+      #multiplier: 1000
     inputs:
       data:
         name: "eeg"
@@ -42,12 +44,12 @@ modules:
         data_type: "RAW_DATA"
         buffer_size: 0
 
+
 ###################################################################
   - id: "foo6"
-    class: "ModuleConvert"
+    class: "Convert"
     settings:
       debug: False
-      num_channels: 16
     inputs:
       data:
         name: "window"
@@ -55,27 +57,8 @@ modules:
         data_type: "RAW_DATA"
     outputs:
       data:
-        message_queues: "eegd"
+        message_queues: "viz_eeg"
         message_type: "MATRIX"
         data_type: "RAW_COORDS"
         buffer_size: 0
 
-###################################################################
-  - id: "foo7"
-    class: "ModuleDownsample"
-    settings:
-      formula: "lttb"
-      percent: 25      # percentage of original data size to downsample to
-      debug: False
-      num_channels: 16
-    inputs:
-      data:
-        name: "window_coords"
-        message_type: "MATRIX"
-        data_type: "RAW_COORDS"
-    outputs:
-      data:
-        message_queues: "eegd"
-        message_type: "MATRIX"
-        data_type: "RAW_COORDS"
-        buffer_size: 0
