--- a/conf/test_modules/module_windows.yml
+++ b/conf/test_modules/module_windows.yml
@@ -9,7 +9,7 @@ global:
 modules:
 ###################################################################
   - id: "origin1"
-    class: "ModuleSignalGenerator"
+    class: "SignalGenerator"
     settings:
       debug: False
       sampling_rate: 250  # Hz (samples per second)
@@ -25,7 +25,7 @@ modules:
 
 ###################################################################
   - id: "viz1"
-    class: "ModuleWindows"
+    class: "TimeWindow"
     settings:
       debug: False
       samples_per_window: 35
@@ -44,7 +44,7 @@ modules:
 
 ####################################################################
   - id: "viz2"
-    class: "ModuleConvert"
+    class: "Convert"
     settings:
       debug: False
     inputs:
