--- a/conf/viz_demos/dwt.yml
+++ b/conf/viz_demos/dwt.yml
@@ -9,7 +9,7 @@ global:
 modules:
 ###################################################################
   - id: "origin1"
-    class: "ModuleSignalGenerator"
+    class: "SignalGenerator"
     settings:
       debug: False
       sampling_rate: 250  # Hz (samples per second)
@@ -26,7 +26,7 @@ modules:
 
 ###################################################################
   - id: "viz1"
-    class: "ModuleWindows"
+    class: "TimeWindow"
     settings:
       # samples_per_window:50, window_overlap:21 = 12fps
 
@@ -48,7 +48,7 @@ modules:
 
 ####################################################################
   - id: "viz2"
-    class: "ModuleConvert"
+    class: "Convert"
     settings:
       debug: False
       num_channels: 16
