--- a/conf/viz_demos/eeg.yml
+++ b/conf/viz_demos/eeg.yml
@@ -9,7 +9,7 @@ global:
 modules:
 ###################################################################
   - id: "origin1"
-    class: "ModuleSignalGenerator"
+    class: "SignalGenerator"
     settings:
       debug: False
       sampling_rate: 250  # Hz (samples per second)
@@ -25,7 +25,7 @@ modules:
 
 ###################################################################
   - id: "viz1"
-    class: "ModuleWindows"
+    class: "TimeWindow"
     settings:
       debug: False
       samples_per_window: 26
@@ -44,7 +44,7 @@ modules:
 
 ####################################################################
   - id: "viz2"
-    class: "ModuleConvert"
+    class: "Convert"
     settings:
       debug: False
     inputs:
@@ -61,7 +61,7 @@ modules:
 
 ######################################################################
 #  - id: "viz3"
-#    class: "ModuleDownsample"
+#    class: "Downsample"
 #    settings:
 #      formula: "lttb"
 #      percent: 50      # percentage of original data size to downsample to
