CSP module tools to parse BCI competition files

--- a/conf/test/module_class_windows.yml
+++ b/conf/test/module_class_windows.yml
@@ -64,9 +64,9 @@ modules:
 
 ###################################################################
   - id: "foo4"
-    class: "TimeWindowClassLabels"
+    class: "ClassWindow"
     settings:
-      debug: False
+      debug: True
     inputs:
       data:
         name: "eeg"
