--- a/conf/custom/csp_from_bci_file.yml
+++ b/conf/custom/csp_from_bci_file.yml
@@ -4,7 +4,7 @@
 #
 ###################################################################
 global:
-  num_channels: 8  # how many outputs to produce (default to device if specified, or 1 if not)
+  num_channels: 59  # how many outputs to produce (default to device if specified, or 1 if not)
 
 modules:
 ###################################################################
@@ -12,20 +12,22 @@ modules:
     class: "SignalGenerator"
     settings:
       debug: False
-      sampling_rate: 250  # Hz (samples per second)
+      sampling_rate: 1000  # Hz (samples per second)
       pattern: "files"   # rand | sine | files
-      files: ["data/csp_oct2.data"] # filepath can be either absolute or relative to dir of run.py
-      separator: ","
+      files: ["/Users/odrulea/Documents/docs/gradschool/BCI/datasets/BCI IV Competition/dataset1/train_data/BCICIV_calib_ds1a_1000Hz_cnt.txt"] # filepath can be either absolute or relative to dir of run.py
+      #separator: ","
       # this will let downstream modules know whether or not timestamp is included
       # setting this to true means timestamp data column will be ignored
       # (by default this is assumed to be first col)
-      data_already_contains_timestamp: True
-      timestamp_column: 8 # based on column starting number of 0
-      class_label_column: 9 # based on column starting number of 0
+      #data_already_contains_timestamp: True
+      #timestamp_column: 8 # based on column starting number of 0
+      #class_label_column: 9 # based on column starting number of 0
       # skip_lines_prefix: "%"
-      skip_lines: 1
+      #skip_lines: 1
       #skip_columns: 0
       generate_at_sampling_rate: False # if false, fast-forward through file as fast as possible, not at original sampling rate
+      mrk_file:
+        class_length: 3000
 
     outputs:
       data:
@@ -61,13 +63,17 @@ modules:
         buffer_size: 0
 
 ####################################################################
-  - id: "foo4"
+  - id: "foo5"
     class: "CSP"
     settings:
       debug: True
-      class_labels: [-1,1]
-      class_label_channel: 8 # based on channel starting number of 0
+      bandpass_filter_range: [7.0,13.0]
       calculation_threshold: 60 # how many epochs for each class label before we trigger calculation of CSP
+      class_labels: [-1,1]
+      class_label_channel: 59 # based on channel starting number of 0
+      epoch_size: 500
+      sampling_rate: 1000  # Hz (samples per second)
+
     inputs:
       data:
         name: "motor_class_windows"
